--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
   "typer>=0.12,<0.13",
   "rich>=13.7,<14",
   "transformers",
-  "torch",
+  "torch==2.7.0+cu126",
   "accelerate",
   "pip",
 ]
@@ -31,6 +31,14 @@ dev = [
   "mypy>=1.10,<2",
   "pytest>=8.2,<9",
 ]
+
+[[tool.uv.index]]
+name = "pytorch-cu126"
+url = "https://download.pytorch.org/whl/cu126"
+explicit = true
+
+[tool.uv.sources]
+torch = { index = "pytorch-cu126" }
 
 [tool.black]
 line-length = 80
